force-app/main/default/objects/Bitacora_Conciliacion__c/Bitacora_Conciliacion__c.object-meta.xml
<CustomObject>
    <description>Objeto en la cual se guardara toda la información que realizaran los usuario en el sistema de conciliación.</description>
    <label>Bitacora Conciliacion</label>
    <nameField>
        <label>Nombre de Bitacora Conciliacion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bitacora Conciliaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>