force-app/main/default/objects/Bitacora_Conciliacion__c/fields/Actividades__c.field-meta.xml
<CustomField>
    <fullName>Actividades__c</fullName>
    <label>Actividades</label>
    <length>255</length>
    <type>Text</type>
</CustomField>