force-app/main/default/objects/Bitacora_Conciliacion__c/fields/Pantalla__c.field-meta.xml
<CustomField>
    <fullName>Pantalla__c</fullName>
    <label>Pantalla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>