force-app/main/default/objects/Bitacora_Conciliacion__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>